--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>SET08101 - Interacting with the DOM</title>
 </head>
 <body>
+    <p><a href = "colourchange.html">Colour Change</a></p>
     <p><a href="#" onClick = "addMessage();">Click Me!</a></p>
     <h1>OUTPUT</h1>
     <ol id="output"></ol>
